--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
-      "usesCleartextTraffic": true
+      "usesCleartextTraffic": true,
+      "package": "com.jakuboldziej.homeapp"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
@@ -32,7 +33,8 @@
     },
     "owner": "jakuboldziej",
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ],
     "runtimeVersion": {
       "policy": "appVersion"
