--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "dev": "expo start",
+    "build": "eas build -p android --profile production",
+    "run-build": "eas build:run -p android",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -12,11 +14,11 @@
     "expo": "^51.0.32",
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.24",
     "lucide-react-native": "^0.438.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -25,8 +27,10 @@
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
     "socket.io-client": "^4.7.5",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "expo-updates": "~0.25.24"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
