--- a/package.json
+++ b/package.json
@@ -15,22 +15,27 @@
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
+    "expo-document-picker": "^12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
     "lucide-react-native": "^0.438.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
     "socket.io-client": "^4.7.5",
     "tailwindcss-react-native": "^1.7.10",
-    "expo-updates": "~0.25.24"
+    "expo-image-picker": "~15.0.7",
+    "expo-keep-awake": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
