login page, splash screen, icon, tabbar, snackbar, FAB

--- a/app.json
+++ b/app.json
@@ -6,11 +6,11 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "ios": {
       "supportsTablet": true,
@@ -36,7 +36,12 @@
       "expo-router",
       "expo-secure-store",
       "expo-document-picker",
-      "expo-image-picker"
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photo"
+        }
+      ]
     ],
     "runtimeVersion": {
       "policy": "appVersion"
