--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-dev-client": "~4.0.26",
     "expo-document-picker": "^12.0.2",
     "expo-file-system": "~17.0.1",
+    "expo-image-picker": "^15.0.7",
+    "expo-keep-awake": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -33,9 +35,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
     "socket.io-client": "^4.7.5",
-    "tailwindcss-react-native": "^1.7.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-keep-awake": "~13.0.2"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
