--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
     "socket.io-client": "^4.7.5",
-    "tailwindcss-react-native": "^1.7.10"
+    "expo-system-ui": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
