--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
     "expo": "^51.0.32",
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
@@ -23,6 +24,7 @@
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.24",
     "lucide-react-native": "^0.438.0",
     "nativewind": "^2.0.11",
@@ -34,8 +36,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
-    "socket.io-client": "^4.7.5",
-    "expo-system-ui": "~3.0.7"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
