--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@likashefqet/react-native-image-zoom": "^4.1.0",
     "expo": "^51.0.32",
     "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
     "expo-document-picker": "^12.0.2",
     "expo-file-system": "~17.0.1",
+    "expo-image": "~1.12.15",
     "expo-image-picker": "^15.0.7",
     "expo-keep-awake": "~13.0.2",
     "expo-linking": "~6.3.1",
