--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
-    "socket.io-client": "^4.7.5",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
