--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
     "@likashefqet/react-native-image-zoom": "^4.1.0",
+    "@react-navigation/drawer": "^6.7.2",
     "expo": "^51.0.32",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
@@ -31,9 +32,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
