--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "run-build": "eas build:run -p android",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "emulator": "emulator -avd nexus"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
