--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
     "@likashefqet/react-native-image-zoom": "^4.1.0",
-    "@react-navigation/drawer": "^6.7.2",
-    "expo": "^51.0.32",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.26",
-    "expo-document-picker": "^12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-image": "~1.12.15",
-    "expo-image-picker": "^15.0.7",
-    "expo-keep-awake": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.24",
+    "@react-navigation/drawer": "^7.1.1",
+    "expo": "^52.0.27",
+    "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.10",
+    "expo-document-picker": "~13.0.2",
+    "expo-file-system": "~18.0.7",
+    "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.4",
+    "expo-keep-awake": "~14.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-router": "^4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.13",
     "lucide-react-native": "^0.438.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.6.0",
-    "react-native-webview": "13.8.6",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-webview": "13.12.5",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
