--- a/package.json
+++ b/package.json
@@ -15,35 +15,36 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@likashefqet/react-native-image-zoom": "^4.1.0",
     "@react-navigation/drawer": "^7.1.1",
-    "expo": "^52.0.27",
-    "expo-constants": "~17.0.4",
-    "expo-dev-client": "~5.0.10",
-    "expo-document-picker": "~13.0.2",
-    "expo-file-system": "~18.0.7",
-    "expo-image": "~2.0.4",
-    "expo-image-picker": "~16.0.4",
-    "expo-keep-awake": "~14.0.2",
-    "expo-linking": "~7.0.4",
-    "expo-router": "^4.0.17",
-    "expo-secure-store": "~14.0.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.13",
-    "lucide-react-native": "^0.438.0",
+    "expo": "~54.0.33",
+    "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-keep-awake": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
+    "expo-secure-store": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
+    "lucide-react-native": "^0.469.0",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-webview": "13.12.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
