--- a/eas.json
+++ b/eas.json
@@ -10,8 +10,7 @@
       "channel": "development",
       "env": {
         "EXPO_PUBLIC_BACKEND_URL": "https://oldziej.pl",
-        "EXPO_PUBLIC_BACKEND_URL_LOCAL": "https://d1fc-188-122-23-154.ngrok-free.app",
-        "EXPO_PUBLIC_SOCKETIO_URL_LOCAL": "http://192.168.1.115:3000"
+        "EXPO_PUBLIC_BACKEND_URL_LOCAL": "https://d1fc-188-122-23-154.ngrok-free.app"
       }
     },
     "preview": {
